--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.br</groupId>
 	<artifactId>gava-market-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>game-stats-api</name>
+	<name>game-market-api</name>
 	<description>API rest of app Gava Market</description>
 	<properties>
 		<java.version>17</java.version>
